Changed About me summary changed some content and hided the picture and the skills part

--- a/index.html
+++ b/index.html
@@ -53,9 +53,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-
+ <!-- Start Social Media -->
+                                        <div class="mu-social-media">
+                                           
+                                            <a href="https://www.facebook.com/Sra.1246" target="_blank" style="margin-left: -337px;"><i class="fa fa-facebook"></i></a>
+                                            <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
+                                            <a href="https://www.linkedin.com/in/shubham-alai/" target="_blank" ><i class="fa fa-linkedin"></i></a>
+                                            <!--<a href="#"><i class="fa fa-google-plus"></i></a>-->
+                                        </div>
                     <!-- Text Logo -->
-                    <a class="navbar-brand" href="#">Shubham</a>
+                    <a class="navbar-brand" href="#" style="margin-left: -251px">Shubham</a>
 
                     <!-- Image Logo -->
                     <!-- <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a> -->
@@ -92,7 +99,7 @@
                     <!-- Start text slide -->
                     <div class="mu-featured-slider-wrapper">
                         <div class="mu-featured-slider" id="typed-strings">
-                            <p>I am <span>Product Manager</span></p>
+                            <p>I am <span>Product Management Enthusiast</span></p>
                             <p>I am <span>Web Developer</span></p>
                             <p>I am <span>Singer</span></p>
                         </div>
@@ -102,9 +109,12 @@
 
                     <div class="mu-featured-content">
                         <p></p>
-                        <a href="#mu-portfolio" class="mu-primary-btn view-my-work-btn">VIEW MY WORK</a>
-                    </div>
+                        <a href="#mu-portfolio" class="mu-primary-btn view-my-work-btn" style="margin-left: 35px;">VIEW MY WORK</a>
 
+                        <a href="https://drive.google.com/open?id=1JHK3JEFLDF174egQaRBVs9tujlMRfDLU" class="mu-primary-btn " target="_blank" download="resume" style="margin-left: 35px;">DOWNLOAD MY RESUME</a>
+                    </div>
+                                
+  
                 </div>
             </div>
         </div>
@@ -127,61 +137,9 @@
                         <div class="mu-about-header">
                             <h2 class="mu-heading-title">ABOUT ME</h2>
                             <span class="mu-header-dot"></span>
-                            <p>My name is Shubham Alai. I am  <strong>Product Manager</strong> and <strong>Web Developer</strong>. Over 4 years of experience in developing products from e-commerce domain for variety of industries. With strong e-commerce domain experience, worked on agile, and SDLC project methodologies and handling client from various industries looking for transition to a product manager role.</p>
-                        </div>
-
-                        <!-- Start About Us Content -->
-                        <div class="mu-about-content">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="mu-about-content-left">
-                                        <img class="mu-profile-img" src="assets/images/profile.jpg" alt="Profile Image">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="mu-about-content-right">
-
-                                        <!-- Start skills progress bar -->
-
-                                        <div class="mu-skill-progress-bar">
-                                            <h3>Skills</h3>
-                                            <span>Product Management</span>
-                                            <div class="mu-pro-bar mu-html5-bar">
-
-                                            </div>
-                                            <span>Business Analysis</span>
-                                            <div class="mu-pro-bar mu-css-bar">
-
-                                            </div>
-                                            <span>Market Research</span>
-                                            <div class="mu-pro-bar mu-photoshop-bar">
-                                            </div>
-                                            <span>Design</span>
-                                            <div class="mu-pro-bar mu-wordpress-bar">
-                                            </div>
-                                            <span>Engineering</span>
-                                            <div class="mu-pro-bar mu-html5-bar">
-                                            </div>
-                                        </div>
-
-                                        <!-- Start Social Media -->
-                                        <div class="mu-social-media">
-                                            <h3>Social</h3>
-                                            <a href="https://www.facebook.com/Sra.1246" target="_blank"><i class="fa fa-facebook"></i></a>
-                                            <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
-                                            <a href="https://www.linkedin.com/in/shubham-alai/" target="_blank" ><i class="fa fa-linkedin"></i></a>
-                                            <!--<a href="#"><i class="fa fa-google-plus"></i></a>-->
-                                        </div>
-
-                                        <!-- Download Ressume Button -->
-                                        <a href="https://drive.google.com/open?id=1JHK3JEFLDF174egQaRBVs9tujlMRfDLU" class="mu-resume-btn" target="_blank" download="resume">Download My Resume</a>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End About Us Content -->
-
+                            <p>My name is Shubham Alai. I am  <strong>Product Management enthusiast</strong> from the <strong>Web Developement</strong> background. Well-versed with agile, SDLC methodologies and client engagement. Over 4.5+ years of experience in developing products in wide e-commerce domain including Retail, Apparel, Aerospace, Automobile, and Real-estate Industries. My stint working on myriad of problems renders expertise to don product manager role. Technical exposure to e-commerce domain and problem-solving attitude drives me for transition to a product manager role.
+                            </p>
+                        </div>                   
                     </div>
                 </div>
             </div>
@@ -197,7 +155,7 @@
                     <div class="mu-service-area">
 
                         <div class="mu-service-header">
-                            <h2 class="mu-heading-title">MY SPCIALITIES</h2>
+                            <h2 class="mu-heading-title">SPECIALITIES</h2>
                             <span class="mu-header-dot"></span>
                             <p> User research | Product Roadmap | Product Analytics | Negotiation | Product lifecycle management | E-commerce |  Customer Experience </p>
                         </div>
@@ -297,7 +255,7 @@
                     <div class="mu-portfolio-area">
 
                         <div class="mu-portfolio-header">
-                            <h2 class="mu-heading-title">MY PORTFOLIO</h2>
+                            <h2 class="mu-heading-title">PORTFOLIO</h2>
                             <span class="mu-header-dot"></span>
                         </div>
 
