Adjusted changes as per responsive data

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <!-- Start Header -->
 <header id="mu-header" class="" role="banner">
-    <div class="container">
+    <div class="container-fluid">
         <nav class="navbar navbar-default mu-navbar">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -55,14 +55,14 @@
                     </button>
  <!-- Start Social Media -->
                                         <div class="mu-social-media">
-                                           
-                                            <a href="https://www.facebook.com/Sra.1246" target="_blank" style="margin-left: -337px;"><i class="fa fa-facebook"></i></a>
+
+                                            <a href="https://www.facebook.com/Sra.1246" target="_blank" ><i class="fa fa-facebook"></i></a>
                                             <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
                                             <a href="https://www.linkedin.com/in/shubham-alai/" target="_blank" ><i class="fa fa-linkedin"></i></a>
                                             <!--<a href="#"><i class="fa fa-google-plus"></i></a>-->
                                         </div>
                     <!-- Text Logo -->
-                    <a class="navbar-brand" href="#" style="margin-left: -251px">Shubham</a>
+                    <a class="navbar-brand" style="margin-left:0px;" href="#" >Shubham</a>
 
                     <!-- Image Logo -->
                     <!-- <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a> -->
@@ -113,8 +113,8 @@
 
                         <a href="https://drive.google.com/open?id=1JHK3JEFLDF174egQaRBVs9tujlMRfDLU" class="mu-primary-btn " target="_blank" download="resume" style="margin-left: 35px;">DOWNLOAD MY RESUME</a>
                     </div>
-                                
-  
+
+
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                             <span class="mu-header-dot"></span>
                             <p>My name is Shubham Alai. I am  <strong>Product Management enthusiast</strong> from the <strong>Web Developement</strong> background. Well-versed with agile, SDLC methodologies and client engagement. Over 4.5+ years of experience in developing products in wide e-commerce domain including Retail, Apparel, Aerospace, Automobile, and Real-estate Industries. My stint working on myriad of problems renders expertise to don product manager role. Technical exposure to e-commerce domain and problem-solving attitude drives me for transition to a product manager role.
                             </p>
-                        </div>                   
+                        </div>
                     </div>
                 </div>
             </div>
