Changed about us grammar

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="mu-about-header">
                             <h2 class="mu-heading-title">ABOUT ME</h2>
                             <span class="mu-header-dot"></span>
-                            <p>My name is Shubham Alai. I am  <strong>Product Management enthusiast</strong> from the <strong>Web Developement</strong> background. Well-versed with agile, SDLC methodologies and client engagement. Over 4.5+ years of experience in developing products in wide e-commerce domain including Retail, Apparel, Aerospace, Automobile, and Real-estate Industries. My stint working on myriad of problems renders expertise to don product manager role. Technical exposure to e-commerce domain and problem-solving attitude drives me for transition to a product manager role.
+                            <p>My name is Shubham Alai. I am a <strong>Product Management enthusiast</strong> from the <strong>Web Development</strong> background.  Well-versed with agile, SDLC methodologies and client engagement. Over 4.5+ years of experience in developing products in a wide e-commerce domain including Retail, Apparel, Aerospace, Automobile, and Real-estate Industries. My stint working on a myriad of problems renders expertise to don product manager role. Technical exposure to the e-commerce domain and problem-solving attitude drives me for the transition to a product manager role.
                             </p>
                         </div>
                     </div>
