--- a/index.html
+++ b/index.html
@@ -575,20 +575,20 @@
 
 
 <script type="text/javascript">
-/*var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || 
+var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || 
 {widgetcode:"1ab0598cbd86d195400efccb0d9e0551728ac31b72b021dfcd2f8c3b98651259434fd79794f222cf2819310753f34a42", values:{},ready:function(){}};
 var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;
-s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");*/
+s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");
 </script>
 <br/>
 <script>
-  function initFreshChat() {
+ /* function initFreshChat() {
     window.fcWidget.init({
       token: "ac8d772a-df72-4b41-88b4-7ec4f3a24326",
       host: "https://wchat.freshchat.com"
     });
   }
-  function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+  function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);*/
 </script>
 </body>
 </html>
