--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                 <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
                                     <a href="https://drive.google.com/open?id=1JOkPS1uKdhV2-LtsQltcRhA566RhFHaj" target="_blank">
                                         <div class="mu-item-thumbonail">
-                                            <img class="img-responsive" src="assets/images/competitoranalysis.png" alt="image">
+                                            <img class="img-responsive" src="assets/images/portfolio/meru vs ola.jpg" alt="image">
                                         </div>
                                         <!-- <div class="mu-filter-item-content">
                                             <h4 class="mu-filter-item-title">Competitor Analysis: OLA vs MERU</h4></br>
@@ -312,7 +312,7 @@
                                 <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
                                     <a href="https://drive.google.com/open?id=1bNM1krSIFKXEsaAU5qJLKT7MUyzckCgq" target="_blank">
                                         <div class="mu-item-thumbonail">
-                                            <img class="img-responsive" src="assets/images/portfolio/furniture.jpg" alt="image">
+                                            <img class="img-responsive" src="assets/images/portfolio/furniture.png" alt="image">
                                         </div>
                                        <!--  <div class="mu-filter-item-content">
                                             <h4 class="mu-filter-item-title">Survey: Online Rental Furniture </h4></br>
@@ -361,7 +361,7 @@
                                 <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2">
                                     <a href="https://drive.google.com/open?id=1Mq4Hxt26UeypjxdRhMG7_9-5kfhJ6Ct_" target="_blank">
                                         <div class="mu-item-thumbonail">
-                                            <img class="img-responsive" src="assets/images/portfolio/clinic.png" alt="image">
+                                            <img class="img-responsive" src="assets/images/portfolio/buyonline.jpg" alt="image">
                                         </div>
                                         <!-- <div class="mu-filter-item-content">
                                             </br>
@@ -378,7 +378,7 @@
                                         <!-- <div class="mu-filter-item-content">
                                             </br>
                                         </div> -->
-										<h4 class="mu-filter-item-title portfolio-img-title-wrap">Sketch : To Do List</h4>
+										<h4 class="mu-filter-item-title portfolio-img-title-wrap">Sketches : To Do List</h4>
                                     </a>
                                 </div>
 
@@ -583,7 +583,7 @@
 
 
 <!-- <div class="chatbot" id="content-mobile" style="bottom:10px; right:10px;">
-    <!-- style 4   chip - logo+text -->
+    <!-- style 4   chip - logo+text 
  
  
 	<div class="">
