--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <p></p>
                         <a href="#mu-portfolio" class="mu-primary-btn view-my-work-btn" style="margin-left: 35px;">VIEW MY WORK</a>
 
-                        <a href="https://drive.google.com/open?id=1JHK3JEFLDF174egQaRBVs9tujlMRfDLU" class="mu-primary-btn " target="_blank" download="resume" style="margin-left: 35px;">DOWNLOAD MY RESUME</a>
+                        <a href="https://drive.google.com/file/d/1kqutHMFK_lsbQwgLdfKkG5S-p4jThwRJ/view?usp=sharing" class="mu-primary-btn " target="_blank" download="resume" style="margin-left: 35px;">DOWNLOAD MY RESUME</a>
                     </div>
 
 
